# diaspora

./: MANIFEST.in  setup.cfg
diaspora/: __init__.py  __main__.py
diaspora/pyrustic_data/: hooking.json
docs/reference/: README.md
docs/reference/content/: diaspora.__init__.md  diaspora.__main__.md  diaspora.hooking.__init__.md  diaspora.hooking.ante_build_hook.md  diaspora.hooking.ante_release_hook.md  diaspora.hooking.post_build_hook.md  diaspora.hooking.post_release_hook.md
