[metadata]
name = diaspora
version = file: VERSION
url = https://github.com/pyrustic/diaspora
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Communicating between loosely coupled components
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    library
    event-notification
    pub-sub
    event-driven
    communication
    loosely-coupled
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    diaspora = diaspora.__main__:main
